/**
 * # Stake Period Info
 * This is a Singleton that stores information about stake period calculations.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in [RFC2119](https://www.ietf.org/rfc/rfc2119)
 * and clarified in [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package com.hedera.hapi.node.state.token;

// SPDX-License-Identifier: Apache-2.0
option java_package = "com.hedera.hapi.node.state.token.legacy";
// <<<pbj.java_package = "com.hedera.hapi.node.state.token">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "services/timestamp.proto";

/**
 * A singleton state object that stores information about stake period calculations.<br/>
 * This is used to track when the last stake period calculations occurred, so that
 * NodeRewards and NodeFee distributions can depend on this singleton instead of tracking it independently.
 */
message StakePeriodInfo {
  /**
   * The time when the last stake period calculations were done.
   * <p>
   * This timestamp SHALL be updated at the end of each staking period
   * when stake period calculations are processed.
   */
  proto.Timestamp last_stake_period_calculation_time = 1;
}

